--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "^2.8.1"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "**/*.{js,jsx,ts,tsx,cs}": [
       "prettier --write"
     ]
   },
