--- a/DiscordBot/nlog.config
+++ b/DiscordBot/nlog.config
@@ -1,18 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       throwConfigExceptions="true">
 
 	<targets>
-		<target xsi:type="File" name="file" fileName="${basedir}\Logs\errorlog-${shortdate}.log" layout="${longdate} [${level:uppercase=true}] ${message} ${exception:format=tostring}" />
-		<target xsi:type="ColoredConsole" name="coloredConsole" layout="${longdate} ${logger} ${level:uppercase=true}: ${message}" >
-			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" backgroundColor="NoChange"/>
-			<highlight-row condition="level == LogLevel.Debug" foregroundColor="Gray" backgroundColor="NoChange"/>
-			<highlight-row condition="level == LogLevel.Info" foregroundColor="Blue" backgroundColor="NoChange"/>
-			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" backgroundColor="NoChange"/>
-			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" backgroundColor="NoChange"/>
-			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red"/>
+		<target xsi:type="File" name="file" fileName="${basedir}\Logs\errorlog-${shortdate}.log"
+		        layout="${longdate} [${level:uppercase=true}] ${message} ${exception:format=tostring}" />
+		<target xsi:type="ColoredConsole" name="coloredConsole"
+		        layout="${longdate} ${logger} ${level:uppercase=true}: ${message}">
+			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" backgroundColor="NoChange" />
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="Gray" backgroundColor="NoChange" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="Blue" backgroundColor="NoChange" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" backgroundColor="NoChange" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" backgroundColor="NoChange" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="White" backgroundColor="Red" />
 		</target>
 	</targets>
 
