Add /crypto command

--- a/DiscordBot/appsettings.json
+++ b/DiscordBot/appsettings.json
@@ -17,7 +17,7 @@
     "ApiUrl": "https://api.openweathermap.org/data/2.5/weather?q="
   },
   "ByBit": {
-    "ApiUrlBtc": "https://api.bybit.com/v2/public/tickers?symbol=BTCUSD"
+    "ApiUrl": "https://api.bybit.com/v2/public/tickers?symbol="
   },
   "DeveloperExcuse": {
     "ApiUrl": "https://api.devexcus.es/"
