--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
       args:
         - TAG=latest
+    image: omgitsjan/discordbotai:latest
     volumes:
       - ./DiscordBot/appsettings.json:/app/appsettings.json
     ports:
