--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: omgitsjan/discordbotai:latest, omgitsjan/DiscordBotAI:${{ github.event.release.tag_name }}
+          tags: omgitsjan/discordbotai:latest, omgitsjan/discordbotai:${{ github.event.release.tag_name }}
 
       - name: Log out of Docker Hub
         run: docker logout
