--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,25 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ]
+  "extends": ["config:recommended", ":dependencyDashboard"],
+  "timezone": "Europe/Berlin",
+  "packageRules": [
+    {
+      "managers": ["npm"],
+      "updateTypes": ["patch"],
+      "automerge": true,
+      "automergeType": "branch",
+      "matchUpdateTypes": ["patch"]
+    },
+    {
+      "managers": ["npm"],
+      "assignees": ["omgitsjan"],
+      "reviewers": ["omgitsjan"],
+      "matchUpdateTypes": ["minor", "major", "patch"]
+    }
+  ],
+  "npm": {
+    "fileMatch": ["^package\\.json$"]
+  },
+  "schedule": ["before 11am on the first day of the month"],
+  "baseBranches": ["develop"]
 }
