--- a/renovate.json
+++ b/renovate.json
@@ -26,5 +26,5 @@
     "fileMatch": ["^package\\.json$"]
   },
   "schedule": ["before 11am on the first day of the month"],
-  "baseBranches": ["develop"]
+  "baseBranches": ["master"]
 }
