--- a/DiscordBot/appsettings.json
+++ b/DiscordBot/appsettings.json
@@ -17,9 +17,6 @@
     "ApiUrl": "https://api.openweathermap.org/data/2.5/weather?q="
   },
   "ByBit": {
-    "ApiUrl": "https://api.bybit.com/v2/public/tickers?symbol="
-  },
-  "DeveloperExcuse": {
-    "ApiUrl": "https://api.devexcus.es/"
+    "ApiUrl": "https://api.bybit.com/v5/market/tickers?category=spot&symbol="
   }
 }
